🐛 FIX: z-index issues with mobile nav

--- a/17. insure-landing-page/styles.css
+++ b/17. insure-landing-page/styles.css
@@ -291,6 +291,7 @@ header .site-head__inner {
 	margin-top: 6rem;
 	background: var(--clr-neutral-100);
 	-webkit-overflow-scrolling: touch;
+	z-index: 10;
 }
 
 .burger-menu[enabled="true"] .navigation ul {
@@ -341,13 +342,16 @@ header .site-head__inner {
 
 .hero {
 	position: relative;
-	/*	display: flex;
-	flex-direction: column;*/
+	flex-direction: column;
 	padding-bottom: calc(var(--spacer) * 3);
 	margin-top: 0;
 	background-color: inherit;
-	/*gap: 4rem;*/
 	justify-content: space-between;
+	z-index: 1;
+}
+
+.hero > * {
+	flex-basis: 100%;
 }
 
 .hero::before {
@@ -355,7 +359,7 @@ header .site-head__inner {
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: -10;
+	z-index: -1000;
 	width: 100vw;
 	height: 100%;
 	margin-left: 50%;
@@ -369,9 +373,10 @@ header .site-head__inner {
 	right: 50%;
 	left: 50%;
 	width: 100vw;
-	max-width: 42rem;
+	max-width: 100vw;
 	margin-right: -50vw;
 	margin-left: -50vw;
+	/*z-index: -100;*/
 }
 
 @media only screen and (min-width: 42rem) {
@@ -381,14 +386,13 @@ header .site-head__inner {
 	}
 
 	.hero::before {
-		height: 70%;
+		height: 80%;
 	}
 
-	/*FIXME image not shrinking */
 	.hero img {
-		position: initial;
-		width: initial;
-		max-width: initial;
+		max-width: 100%;
+		left: 0;
+		right: 0;
 		margin-right: 0;
 		margin-left: 0;
 	}
